--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 
     <main class="main">
 
-        <div class="content introduction gridstart01 grid-end07">
-            <figure class="mgrid-start01 mgrid-end05 gridstart01 grid-end05">
+        <div class="content introduction gridstart01 grid-end">
+            <figure class="mgrid-start01 mgrid-end05 gridstart01 grid-end">
                 <img class="image__intro" src="assets/images/image-introd.png" srcset="assets/images/image-introd@2x.png 2x" alt="chien heureux" loading="lazy" decoding="async" data-aos="fade-right" data-aos-duration="1500">
             </figure>
-            <h1 class="title title--big mgrid-start01 mgrid-end grid-start02 grid-end06">Le meilleur moyen de les aider, c'est de savoir comment!</h1>
-            <p class="txt__content mgrid-start01 mgrid-end grid-start02 grid-end06">AnimErgency est un guide complet et gratuit pour prendre soin de nos animaux bien-aimés. Qu’il s’agisse d’un animal domestique ou sauvage, savoir agir fait toute la différence : apprenez donc comment apporter une aide précieuse à ces animaux en détresse.</p>
-            <a class="btn-experience bouton--style  mgrid-start02 mgrid-end05 grid-start03 grid-end05" href="https://xd.adobe.com/view/9a886bf7-ffc2-4fcb-9da5-5ba5720505b7-cfdb/?fullscreen&hints=off">Commencer l'expérience</a>
+            <h1 class="title title--big mgrid-start01 mgrid-end grid-start02 grid-end">Le meilleur moyen de les aider, c'est de savoir comment!</h1>
+            <p class="txt__content mgrid-start01 mgrid-end grid-start02 grid-end">AnimErgency est un guide complet et gratuit pour prendre soin de nos animaux bien-aimés. Qu’il s’agisse d’un animal domestique ou sauvage, savoir agir fait toute la différence : apprenez donc comment apporter une aide précieuse à ces animaux en détresse.</p>
+            <a class="btn-experience bouton--style  mgrid-start02 mgrid-end05 grid-start01 grid-end" href="https://xd.adobe.com/view/9a886bf7-ffc2-4fcb-9da5-5ba5720505b7-cfdb/?fullscreen&hints=off">Commencer l'expérience</a>
         </div>
 
         <section class="scroll-reveal content motivation" data-aos="fade-up" data-aos-duration="1000">
@@ -88,7 +88,7 @@
             <figure class="figure mgrid-start01 mgrid-end05 gridstart01 grid-end">
                 <img class="image__content" src="assets/images/maya.png" srcset="assets/images/maya@2x.png 2x" alt="Photo de moi et de Maya" loading="lazy" decoding="async" data-aos="fade-right" data-aos-duration="1500">
             </figure>
-            <p class="txt__content txt__content--color mgrid-start01 mgrid-end grid-start02 grid-end06">Etant passionné des animaux depuis mon plus jeune âge, j’ai décidé de consacrer mon TFA à leur bien-être. En effet, c’est lorsque je me rappelais de tous les animaux blessés que l’on trouve aux bords des routes, qu’une vague idée de projet m’est venue. Je ne savais pas encore comment m’y prendre, ni si mon idée était bonne ou pas. Tout ce que je voulais, c’était de venir en aide à ces animaux dans le besoin, d’une quelconque façon.</p>
+            <p class="txt__content txt__content--color mgrid-start01 mgrid-end grid-start02 grid-end">Etant passionné des animaux depuis mon plus jeune âge, j’ai décidé de consacrer mon TFA à leur bien-être. En effet, c’est lorsque je me rappelais de tous les animaux blessés que l’on trouve aux bords des routes, qu’une vague idée de projet m’est venue. Je ne savais pas encore comment m’y prendre, ni si mon idée était bonne ou pas. Tout ce que je voulais, c’était de venir en aide à ces animaux dans le besoin, d’une quelconque façon.</p>
         </section>
 
         <section id="rencontres"  class="scroll-reveal content rencontres" data-aos="fade-up" data-aos-duration="1000">
@@ -97,16 +97,16 @@
             <p class="txt__content mgrid-start01 mgrid-end grid-start02 grid-end06">Pour commencer mon travail, je souhaitais me tourner vers une association qui aurait comme objectif principal de soigner des animaux. C’est là que j’ai découvert le CREAVES de Namur, une ASBL spécialisée dans la revalidation des espèces animales vivant à l’état sauvage.</p>
 
             <h3 class="title title--small mgrid-start01 mgrid-end grid-start01 grid-end">Rencontre avec L’ASBL</h3>
-            <p class="txt__content mgrid-start01 mgrid-end grid-start01 grid-end05">Lors de mon passage à l’ASBL, j’ai pu rencontrer brièvement Romain De Jaegere (vice-président et coordinateur du centre), ainsi que Laurence Delcourt (responsable soin et des soigneurs) et quelques bénévoles. C’est avec Laurence que j’en ai appris plus sur le centre. Elle m’a expliqué que leur mission est d’accueillir et soigner les animaux sauvages blessés, malades ou en danger en vue de les restituer, après revalidation, à la vie sauvage dans leur habitat naturel.</p>
-            <figure class="mgrid-start02 mgrid-end05 gridstart03 grid-end">
+            <p class="txt__content mgrid-start01 mgrid-end grid-start02 grid-end06">Lors de mon passage à l’ASBL, j’ai pu rencontrer brièvement Romain De Jaegere (vice-président et coordinateur du centre), ainsi que Laurence Delcourt (responsable soin et des soigneurs) et quelques bénévoles. C’est avec Laurence que j’en ai appris plus sur le centre. Elle m’a expliqué que leur mission est d’accueillir et soigner les animaux sauvages blessés, malades ou en danger en vue de les restituer, après revalidation, à la vie sauvage dans leur habitat naturel.</p>
+            <figure class="mgrid-start02 mgrid-end05 gridstart04 grid-end">
                 <img class="image__content image__content--logo" src="assets/images/logo-creaves-Namur.png" srcset="assets/images/logo-creaves-Namur@2x.png 2x" alt="Logo creaves namur" loading="lazy" decoding="async">
             </figure>
 
             
-            <h3 class="title title--small mgrid-start01 mgrid-end grid-start01 grid-end">Réalisation d’enquête auprès des personnes</h3>
-            <p class="txt__content mgrid-start01 mgrid-end grid-start01 grid-end">Une fois ma rencontre avec l’association derrière moi, je ne savais plus trop dans quelle direction je devais emmener mon projet. Après pas mal de réflexion, j’ai eu une pensée qui m’a permis de m’en sortir: “Et si je n’étais pas le seul à vouloir venir en aide à ces animaux blessés? Et si comme moi, d’autres personnes veulent venir en aide aux animaux que ce soit les leur ou pas, mais ne savent juste pas comment faire? ”. Afin de valider ma théorie, j’ai développé un questionnaire qui me permettrait de savoir si mon idée était juste ou pas, mais aussi d’obtenir des données et des conclusions pour le moins intéressantes.</p>
-            <figure class="mgrid-start02 mgrid-end05 gridstart02 grid-end05">
-                <img class="image__content image__content--logo" src="assets/images/formulaire.png" srcset="assets/images/formulaire@2x.png 2x" alt="Image d'un formulaire" loading="lazy" decoding="async">
+            <h3 class="title title--small mgrid-start01 mgrid-end grid-start02 grid-end">Réalisation d’enquête auprès des personnes</h3>
+            <p class="txt__content mgrid-start01 mgrid-end grid-start02 grid-end06">Une fois ma rencontre avec l’association derrière moi, je ne savais plus trop dans quelle direction je devais emmener mon projet. Après pas mal de réflexion, j’ai eu une pensée qui m’a permis de m’en sortir: “Et si je n’étais pas le seul à vouloir venir en aide à ces animaux blessés? Et si comme moi, d’autres personnes veulent venir en aide aux animaux que ce soit les leur ou pas, mais ne savent juste pas comment faire? ”. Afin de valider ma théorie, j’ai développé un questionnaire qui me permettrait de savoir si mon idée était juste ou pas, mais aussi d’obtenir des données et des conclusions pour le moins intéressantes.</p>
+            <figure class="mgrid-start02 mgrid-end05 gridstart03 grid-end05">
+                <img class="image__content" src="assets/images/formulaire.png" srcset="assets/images/formulaire@2x.png 2x" alt="Image d'un formulaire" loading="lazy" decoding="async">
             </figure>
 
             <details class="more mgrid-start01 mgrid-end grid-start02 grid-end06">
@@ -238,11 +238,13 @@
         <section id="presentation" class="scroll-reveal content presentation" data-aos="fade-up" data-aos-duration="1000">
             <h2 class="title title--medium mgrid-start01 mgrid-end grid-start01 grid-end">Présentation TFA</h2>
 
-            <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Voici la vidéo du déroulement de mon projet</p>
+            <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end06">Voici le lien vers les slides de présenation du projet</p>
 
-            <img src="#" alt="">
+            <figure class="mgrid-start01 mgrid-end gridstart01 grid-end">
+                <img class="image__content" src="assets/images/presentation.png" srcset="assets/images/presentation@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async" data-aos="fade-right" data-aos-duration="1500">
+            </figure>>
 
-            <a class="section-link mgrid-start01 mgrid-end grid-start03 grid-end09" href="#">Lien vers reste d'infos</a>
+            <a class="section-link mgrid-start01 mgrid-end grid-start02 grid-end06" href="https://docs.google.com/presentation/d/13jYHjFimyvfOAy1qRVOk_QKoAJsZWluX4YKxJJLhGLg/edit?usp=sharing">Lien vers les slides de la présentation</a>
             
         </section>
 
@@ -253,7 +255,7 @@
                 <img class="image__content" src="assets/images/image-intro.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async" data-aos="fade-right" data-aos-duration="1500">
             </figure>
 
-            <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Avec la création de cette formation/ guide, j’espère pouvoir venir en aide à toutes ces personnes qui se trouvent dans une situation d’urgence avec un animal et qui ne savent pas comment réagir, mais aussi, à tous les animaux qui pourraient avoir besoin d’aide. </p>
+            <p class="txt__content mgrid-start01 mgrid-end grid-start02 grid-end06">Pour conclure, j’espère qu’en développant cette idée, je pourrais venir en aide à toutes ces personnes qui risquent de rencontrer une situation d’urgence avec un animal. Mais aussi, à tous ces animaux qui pourraient avoir besoin d’un coup de main. Des situations d’urgences il en existe un très grand nombre chez l’homme. Cependant, il en existe tout autant chez les bêtes. Voilà pourquoi ce projet me tient à cœur. Nombreuses fois j’ai vu des animaux souffrir sans savoir comment agir ni quoi faire. Néanmoins, j’espère avec l’aide de ce guide, de nombreuses personnes ainsi que moi-même, nous pourrons enfin réagir à temps et sauver la vie de tous ces animaux qui ne demandent qu’une chose, qu’on leur tende la main.</p>
 
         </section>
 
