modif burger menu

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         </div>
         <nav class="nav__header header--display header--no-display" id="menu-burger">
             <ul class="header__el">
-                <li class="header__el nav__el--active"><a class="header__link" href="index.html">Accueil</a></li>
-                <li class="header__el nav__el--inactive"><a class="header__link" href="#rencontres">Rencontres</a></li>
-                <li class="header__el nav__el--inactive"><a class="header__link" href="#solutions">Solutions</a></li>
-                <li class="header__el nav__el--inactive"><a class="header__link" href="#modules">Modules</a></li>
-                <li class="header__el nav__el--inactive"><a class="header__link" href="#presentation">Présentation</a></li>
+                <li class="header__el active"><a class="header__link" href="index.html">Accueil</a></li>
+                <li class="header__el "><a class="header__link" href="#rencontres">Rencontres</a></li>
+                <li class="header__el "><a class="header__link" href="#solutions">Solutions</a></li>
+                <li class="header__el "><a class="header__link" href="#modules">Modules</a></li>
+                <li class="header__el "><a class="header__link" href="#presentation">Présentation</a></li>
             </ul>
         </nav>
     </header>
@@ -75,12 +75,16 @@
     <main class="main">
 
         <div class="content introduction gridstart01 grid-end">
-            <figure class="mgrid-start01 mgrid-end05 gridstart01 grid-end">
-                <img class="image__intro" src="assets/images/image-introd.png" srcset="assets/images/image-introd@2x.png 2x" alt="chien heureux" loading="lazy" decoding="async" data-aos="fade-right" data-aos-duration="1500">
-            </figure>
-            <h1 class="title title--big mgrid-start01 mgrid-end grid-start02 grid-end">Le meilleur moyen de les aider, c'est de savoir comment!</h1>
-            <p class="txt__content mgrid-start01 mgrid-end grid-start02 grid-end">AnimErgency est un guide complet et gratuit pour prendre soin de nos animaux bien-aimés. Qu’il s’agisse d’un animal domestique ou sauvage, savoir agir fait toute la différence : apprenez donc comment apporter une aide précieuse à ces animaux en détresse.</p>
-            <a class="btn-experience bouton--style  mgrid-start02 mgrid-end05 grid-start01 grid-end" href="https://xd.adobe.com/view/9a886bf7-ffc2-4fcb-9da5-5ba5720505b7-cfdb/?fullscreen&hints=off">Commencer l'expérience</a>
+            <div>
+                <figure class="mgrid-start01 mgrid-end05 gridstart01 grid-end">
+                    <img class="image__intro" src="assets/images/image-introd.png" srcset="assets/images/image-introd@2x.png 2x" alt="chien heureux" loading="lazy" decoding="async" data-aos="fade-right" data-aos-duration="1500">
+                </figure>
+            </div>
+            <div class="sectionpadding">
+                <h1 class="title title--big mgrid-start01 mgrid-end grid-start02 grid-end">Le meilleur moyen de les aider, c'est de savoir comment!</h1>
+                <p class="txt__content mgrid-start01 mgrid-end grid-start02 grid-end">AnimErgency est un guide complet et gratuit pour prendre soin de nos animaux bien-aimés. Qu’il s’agisse d’un animal domestique ou sauvage, savoir agir fait toute la différence : apprenez donc comment apporter une aide précieuse à ces animaux en détresse.</p>
+                <a class="btn-experience bouton--style  mgrid-start02 mgrid-end05 grid-start01 grid-end" href="https://xd.adobe.com/view/9a886bf7-ffc2-4fcb-9da5-5ba5720505b7-cfdb/?fullscreen&hints=off">Commencer l'expérience</a>
+            </div>
         </div>
 
         <section class="scroll-reveal content motivation" data-aos="fade-up" data-aos-duration="1000">
@@ -91,7 +95,7 @@
             <p class="txt__content txt__content--color mgrid-start01 mgrid-end grid-start02 grid-end">Etant passionné des animaux depuis mon plus jeune âge, j’ai décidé de consacrer mon TFA à leur bien-être. En effet, c’est lorsque je me rappelais de tous les animaux blessés que l’on trouve aux bords des routes, qu’une vague idée de projet m’est venue. Je ne savais pas encore comment m’y prendre, ni si mon idée était bonne ou pas. Tout ce que je voulais, c’était de venir en aide à ces animaux dans le besoin, d’une quelconque façon.</p>
         </section>
 
-        <section id="rencontres"  class="scroll-reveal content rencontres" data-aos="fade-up" data-aos-duration="1000">
+        <section id="rencontres"  class="scroll-reveal content rencontres sectionpadding" data-aos="fade-up" data-aos-duration="1000">
             <h2 class="title title--medium mgrid-start01 mgrid-end grid-start01 grid-end">Rencontres</h2>
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start02 grid-end06">Pour commencer mon travail, je souhaitais me tourner vers une association qui aurait comme objectif principal de soigner des animaux. C’est là que j’ai découvert le CREAVES de Namur, une ASBL spécialisée dans la revalidation des espèces animales vivant à l’état sauvage.</p>
@@ -148,7 +152,7 @@
 
         </section>
 
-        <section id="solutions" class="scroll-reveal content solutions" data-aos="fade-up" data-aos-duration="1000">
+        <section id="solutions" class="scroll-reveal content solutions sectionpadding" data-aos="fade-up" data-aos-duration="1000">
             <h2 class=" title title--medium mgrid-start01 mgrid-end grid-start01 grid-end">Solutions</h2>
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start01 grid-end">Après beaucoup de réflexion, j’ai fini par trouver 3 potentielles solutions</p>
@@ -177,7 +181,7 @@
 
         </section>
 
-        <section id="modules" class="scroll-reveal content modules" data-aos="fade-up" data-aos-duration="1000">
+        <section id="modules" class="scroll-reveal content modules sectionpadding" data-aos="fade-up" data-aos-duration="1000">
             <h2 class="title title--medium mgrid-start01 mgrid-end grid-start01 grid-end">Modules</h2>
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Dans le but de mener à bien mon projet, il y aura une fonctionnalité principale et plusieurs fonctionnalités secondaires. </p>
@@ -235,7 +239,7 @@
             
         </section>
 
-        <section id="presentation" class="scroll-reveal content presentation" data-aos="fade-up" data-aos-duration="1000">
+        <section id="presentation" class="scroll-reveal content presentation sectionpadding" data-aos="fade-up" data-aos-duration="1000">
             <h2 class="title title--medium mgrid-start01 mgrid-end grid-start01 grid-end">Présentation TFA</h2>
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end06">Voici le lien vers les slides de présenation du projet</p>
@@ -248,7 +252,7 @@
             
         </section>
 
-        <section class=" scroll-reveal content conclusion" data-aos="fade-up" data-aos-duration="1000">
+        <section class=" scroll-reveal content conclusion sectionpadding" data-aos="fade-up" data-aos-duration="1000">
             <h2 class="title title--medium mgrid-start01 mgrid-end grid-start01 grid-end">Conclusion</h2>
 
             <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
