correction burger menu + arrangement du content

--- a/index.html
+++ b/index.html
@@ -88,11 +88,15 @@
         </div>
 
         <section class="scroll-reveal content motivation" data-aos="fade-up" data-aos-duration="1000">
-            <h2 class="title title--medium title--color mgrid-start01 mgrid-end grid-start01 grid-end">Motivation</h2>
-            <figure class="figure mgrid-start01 mgrid-end05 gridstart01 grid-end">
-                <img class="image__content" src="assets/images/maya.png" srcset="assets/images/maya@2x.png 2x" alt="Photo de moi et de Maya" loading="lazy" decoding="async" data-aos="fade-right" data-aos-duration="1500">
-            </figure>
-            <p class="txt__content txt__content--color mgrid-start01 mgrid-end grid-start02 grid-end">Etant passionné des animaux depuis mon plus jeune âge, j’ai décidé de consacrer mon TFA à leur bien-être. En effet, c’est lorsque je me rappelais de tous les animaux blessés que l’on trouve aux bords des routes, qu’une vague idée de projet m’est venue. Je ne savais pas encore comment m’y prendre, ni si mon idée était bonne ou pas. Tout ce que je voulais, c’était de venir en aide à ces animaux dans le besoin, d’une quelconque façon.</p>
+            <div class="sectionpadding">
+                <h2 class="title title--medium title--color mgrid-start01 mgrid-end grid-start01 grid-end">Motivation</h2>
+                <p class="txt__content txt__content--color mgrid-start01 mgrid-end grid-start02 grid-end">Etant passionné des animaux depuis mon plus jeune âge, j’ai décidé de consacrer mon TFA à leur bien-être. En effet, c’est lorsque je me rappelais de tous les animaux blessés que l’on trouve aux bords des routes, qu’une vague idée de projet m’est venue. Je ne savais pas encore comment m’y prendre, ni si mon idée était bonne ou pas. Tout ce que je voulais, c’était de venir en aide à ces animaux dans le besoin, d’une quelconque façon.</p>
+            </div>
+            <div>
+                <figure class="figure mgrid-start01 mgrid-end05 gridstart01 grid-end">
+                    <img class="image__content" src="assets/images/maya.png" srcset="assets/images/maya@2x.png 2x" alt="Photo de moi et de Maya" loading="lazy" decoding="async" data-aos="fade-right" data-aos-duration="1500">
+                </figure>
+            </div>
         </section>
 
         <section id="rencontres"  class="scroll-reveal content rencontres sectionpadding" data-aos="fade-up" data-aos-duration="1000">
