correction mise en page

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
                 <div>
                     <figure>
-                        <img class="image__content" src="assets/images/maya.png" srcset="assets/images/maya@2x.png 2x" alt="Photo de moi et de Maya" loading="lazy" decoding="async" data-aos="fade-right" data-aos-duration="1500">
+                        <img class="image__content" src="assets/images/maya.png" srcset="assets/images/maya@2x.png 2x" alt="Photo de moi et de Maya" loading="lazy" decoding="async" data-aos="fade-left" data-aos-duration="1500">
                     </figure>
                 </div>
             </section>
@@ -110,14 +110,14 @@
                     <h3 class="title title--small">Rencontre avec L’ASBL</h3>
                     <p class="txt__content">Lors de mon passage à l’ASBL, j’ai pu rencontrer brièvement Romain De Jaegere (vice-président et coordinateur du centre), ainsi que Laurence Delcourt (responsable soin et des soigneurs) et quelques bénévoles. C’est avec Laurence que j’en ai appris plus sur le centre. Elle m’a expliqué que leur mission est d’accueillir et soigner les animaux sauvages blessés, malades ou en danger en vue de les restituer, après revalidation, à la vie sauvage dans leur habitat naturel.</p>
                     <figure>
-                        <img class="image__content image__content--logo" src="assets/images/logo-creaves-Namur.png" srcset="assets/images/logo-creaves-Namur@2x.png 2x" alt="Logo creaves namur" loading="lazy" decoding="async">
+                        <img class="image__rencontres" src="assets/images/logo-creaves-Namur.png" srcset="assets/images/logo-creaves-Namur@2x.png 2x" alt="Logo creaves namur" loading="lazy" decoding="async">
                     </figure>
                 </div>
                 <div>
                     <h3 class="title title--small">Réalisation d’enquête auprès des personnes</h3>
                     <p class="txt__content">Une fois ma rencontre avec l’association derrière moi, je ne savais plus trop dans quelle direction je devais emmener mon projet. Après pas mal de réflexion, j’ai eu une pensée qui m’a permis de m’en sortir: “Et si je n’étais pas le seul à vouloir venir en aide à ces animaux blessés? Et si comme moi, d’autres personnes veulent venir en aide aux animaux que ce soit les leur ou pas, mais ne savent juste pas comment faire? ”. Afin de valider ma théorie, j’ai développé un questionnaire qui me permettrait de savoir si mon idée était juste ou pas, mais aussi d’obtenir des données et des conclusions pour le moins intéressantes.</p>
                     <figure>
-                        <img class="image__content" src="assets/images/formulaire.png" srcset="assets/images/formulaire@2x.png 2x" alt="Image d'un formulaire" loading="lazy" decoding="async">
+                        <img class="image__rencontres" src="assets/images/formulaire.png" srcset="assets/images/formulaire@2x.png 2x" alt="Image d'un formulaire" loading="lazy" decoding="async">
                     </figure>
                 </div>
                 <div>
@@ -190,7 +190,7 @@
 
             </section>
 
-            <section id="modules" class="scroll-reveal content modules sectionpadding" data-aos="fade-up" data-aos-duration="1000">
+            <section id="modules" class="scroll-reveal modules sectionpadding" data-aos="fade-up" data-aos-duration="1000">
                 <h2 class="title title--medium">Modules</h2>
 
                 <p class="txt__content">Dans le but de mener à bien mon projet, il y aura une fonctionnalité principale et plusieurs fonctionnalités secondaires. </p>
@@ -251,25 +251,26 @@
             <section id="presentation" class="scroll-reveal content presentation sectionpadding" data-aos="fade-up" data-aos-duration="1000">
                 <h2 class="title title--medium">Présentation TFA</h2>
 
-                <p class="txt__content">Voici le lien vers les slides de présenation du projet</p>
+                <p class="txt__content">Voici le lien vers les slides de présentation du projet</p>
 
                 <figure>
                     <img class="image__content" src="assets/images/presentation.png" srcset="assets/images/presentation@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async" data-aos="fade-right" data-aos-duration="1500">
-                </figure>>
+                </figure>
 
                 <a class="section-link" href="https://docs.google.com/presentation/d/13jYHjFimyvfOAy1qRVOk_QKoAJsZWluX4YKxJJLhGLg/edit?usp=sharing">Lien vers les slides de la présentation</a>
                 
             </section>
 
-            <section class=" scroll-reveal content conclusion sectionpadding" data-aos="fade-up" data-aos-duration="1000">
-                <h2 class="title title--medium">Conclusion</h2>
-
-                <figure>
-                    <img class="image__content" src="assets/images/image-intro.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async" data-aos="fade-right" data-aos-duration="1500">
-                </figure>
-
-                <p class="txt__content">Pour conclure, j’espère qu’en développant cette idée, je pourrais venir en aide à toutes ces personnes qui risquent de rencontrer une situation d’urgence avec un animal. Mais aussi, à tous ces animaux qui pourraient avoir besoin d’un coup de main. Des situations d’urgences il en existe un très grand nombre chez l’homme. Cependant, il en existe tout autant chez les bêtes. Voilà pourquoi ce projet me tient à cœur. Nombreuses fois j’ai vu des animaux souffrir sans savoir comment agir ni quoi faire. Néanmoins, j’espère avec l’aide de ce guide, de nombreuses personnes ainsi que moi-même, nous pourrons enfin réagir à temps et sauver la vie de tous ces animaux qui ne demandent qu’une chose, qu’on leur tende la main.</p>
-
+            <section class="scroll-reveal content conclusion" data-aos="fade-up" data-aos-duration="1000">
+                <div class=" sectionpadding">
+                    <h2 class="title title--medium">Conclusion</h2>
+                    <p class="txt__content">Pour conclure, j’espère qu’en développant cette idée, je pourrais venir en aide à toutes ces personnes qui risquent de rencontrer une situation d’urgence avec un animal. Mais aussi, à tous ces animaux qui pourraient avoir besoin d’un coup de main. Des situations d’urgences il en existe un très grand nombre chez l’homme. Cependant, il en existe tout autant chez les bêtes. Voilà pourquoi ce projet me tient à cœur. Nombreuses fois j’ai vu des animaux souffrir sans savoir comment agir ni quoi faire. Néanmoins, j’espère avec l’aide de ce guide, de nombreuses personnes ainsi que moi-même, nous pourrons enfin réagir à temps et sauver la vie de tous ces animaux qui ne demandent qu’une chose, qu’on leur tende la main.</p>
+                </div>
+                <div>
+                    <figure>
+                        <img class="image__content" src="assets/images/image-intro.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async" data-aos="fade-right" data-aos-duration="1500">
+                    </figure>
+                </div>
             </section>
 
             <button class="scroll-up-button">
