--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 
             <div class="sectionpadding tgrid-start01 tgrid-end04 trow-start01 grid-start02 grid-end05 row-start01">
                 <h2 class="title title--medium">Présentation TFA</h2>
-                <p class="txt__content">Voici le lien vers les slides de présentation du projet</p>
+                <p class="txt__content">Pour voir la présentation, cliquez sur l'image&nbsp;!</p>
             </div>
             
             <div class="tgrid-start02 tgrid-end05 trow-start02 grid-start02 grid-end05 row-start02">
